--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,6 @@
 *.h linguist-detectable=false
 *.cpp linguist-detectable=false
 *.hpp linguist-detectable=false
+*.dart linguist-detectable=true
+
 
