--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_typeahead: ^5.2.0
   http: ^1.3.0
   shared_preferences: ^2.5.2
 
